Rename to ThreadLocalScriptEngineHolder